fix title spacing

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -32,6 +32,7 @@ nav.navbar {
       margin: -0.35em;
       padding-right: 1em;
       padding-bottom: 0.3em;
+      margin-left: -2.2em;
     }
 
     a.nav-link:hover {
